fixed padding on mobile nav

--- a/css/header.css
+++ b/css/header.css
@@ -81,7 +81,7 @@ nav a:hover{
     border-bottom: 2px solid #9c9c9c;
     background-color: #e6e6e6;
 	display: block;
-    padding: 2% 0;
+    padding: 20px 0;
     flex-direction: column;
     text-align: center;
     justify-content: center;
